parser/src/parser/snapshots/parser__parser__parser__tests__pass_stmt-3.snap
---
source: parser/src/parser/parser.rs
description: "pass\n"
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        Pass(
            Pass {
                node: Node {
                    start: 0,
                    end: 4,
                },
            },
        ),
    ],
}
