parser/src/parser/snapshots/parser__parser__parser__tests__raise_statement.snap
---
source: parser/src/parser/parser.rs
description: raise
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        Raise(
            Raise {
                node: Node {
                    start: 0,
                    end: 5,
                },
                exc: None,
                cause: None,
            },
        ),
    ],
}
