parser/src/parser/snapshots/parser__parser__parser__tests__starred.snap
---
source: parser/src/parser/parser.rs
description: (*a)
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [
        ExpressionStatement(
            Starred(
                Starred {
                    node: Node {
                        start: 0,
                        end: 3,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 2,
                                end: 3,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
