parser/src/parser/snapshots/parser__parser__parser__tests__string_literal_concatnation-10.snap
---
source: parser/src/parser/parser.rs
description: "f'a' 'b' 'c'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 3,
                                    end: 0,
                                },
                                value: Str(
                                    "a",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 8,
                                },
                                value: Str(
                                    "b",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: Str(
                                    "c",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
