parser/src/parser/snapshots/parser__parser__parser__tests__string_literal_concatnation-11.snap
---
source: parser/src/parser/parser.rs
description: "'d' f'a' 'b'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 3,
                                },
                                value: Str(
                                    "d",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 7,
                                    end: 0,
                                },
                                value: Str(
                                    "a",
                                ),
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: Str(
                                    "b",
                                ),
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
